<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin_card_view"
    app:cardElevation="@dimen/card_elevation_card_view">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/card_padding">
        <TextView
            android:id="@+id/textViewTituloPergunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tamanho_fonte_card"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textViewCategoriaPergunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">
            <ImageButton
                android:id="@+id/btnResponderPergunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/responder_pergunta"
                app:srcCompat="@drawable/ic_baseline_question_answer_24"
                tools:ignore="VectorDrawableCompat"/>
            <ImageButton
                android:id="@+id/btnEditarPergunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editar_pergunta"
                app:srcCompat="@drawable/ic_baseline_edit_24"
                tools:ignore="VectorDrawableCompat"/>
            <ImageButton
                android:id="@+id/btnDeletarPergunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deletar_pergunta"
                app:srcCompat="@drawable/ic_baseline_delete_24"
                tools:ignore="VectorDrawableCompat" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
</androidx.cardview.widget.CardView>
