<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PublicarArtigoFragment"
    app:rowCount="6"
    app:columnCount="1">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTituloArtigo"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="120"
        android:layout_marginLeft="@dimen/margem_conteudo"
        android:layout_marginRight="@dimen/margem_conteudo"
        android:layout_marginTop="@dimen/margem_conteudo"
        app:layout_column="0"
        app:layout_row="0"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTituloArtigoEdit"
            android:hint="@string/informe_titulo_artigo"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewConteudoArtigo"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="2000"
        android:layout_marginLeft="@dimen/margem_conteudo"
        android:layout_marginRight="@dimen/margem_conteudo"
        android:layout_marginTop="@dimen/margem_conteudo"
        app:layout_column="0"
        app:layout_row="1"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtConteudoArtigoEdit"
            android:hint="@string/informe_conteudo_artigo"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botaoPublicarArtigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_publicar_artigo"
        android:layout_marginLeft="@dimen/margem_conteudo"
        android:layout_marginRight="@dimen/margem_conteudo"
        android:layout_marginTop="@dimen/margem_conteudo"
        android:layout_marginBottom="@dimen/margem_conteudo"
        app:layout_column="0"
        app:layout_row="2"
        style="@style/botao"/>

</androidx.gridlayout.widget.GridLayout>